--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,12 +10,26 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="652.0" prefWidth="1041.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visao.ControlePrincipal">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visao.ControlePrincipal">
    <children>
-      <VBox prefHeight="652.0" prefWidth="254.0" style="-fx-background-color: #3f2863;">
+      <VBox prefHeight="720.0" prefWidth="254.0" style="-fx-background-color: #3f2863;">
          <children>
-            <AnchorPane prefHeight="51.0" prefWidth="244.0" />
-            <Button alignment="BASELINE_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Cadastrar usuário" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <AnchorPane prefHeight="97.0" prefWidth="244.0">
+               <children>
+                  <ImageView fitHeight="59.0" fitWidth="64.0" layoutX="5.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@imagens/porco.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="64.0" layoutY="18.0" text="Label" />
+                  <Label layoutX="70.0" layoutY="27.0" prefHeight="59.0" prefWidth="147.0" text="Vacinação Digital" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="17.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Cadastrar usuário" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -32,7 +47,7 @@
                   <Insets bottom="10.0" left="5.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Alterar cadastro" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Alterar cadastro" textFill="WHITE">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -50,7 +65,7 @@
                   <Insets bottom="10.0" left="5.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="39.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Pesquisar usuário" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="39.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Pesquisar usuário" textFill="WHITE">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -68,7 +83,7 @@
                   <Insets bottom="10.0" left="5.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="68.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Vacinação" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="68.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Vacinação" textFill="WHITE">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -86,7 +101,7 @@
                   <Insets bottom="10.0" left="5.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="97.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Agendamento" textFill="WHITE">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="97.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #3f2863;" text="Agendamento" textFill="WHITE">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -109,5 +124,19 @@
             <Insets left="10.0" top="20.0" />
          </padding>
       </VBox>
+      <AnchorPane layoutX="254.0" layoutY="32.0" prefHeight="690.0" prefWidth="1028.0">
+         <children>
+            <AnchorPane layoutX="773.0" layoutY="-34.0" prefHeight="0.0" prefWidth="254.0" style="-fx-background-color: BLACK;" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="-5.0" layoutY="-2.0" prefHeight="29.0" prefWidth="1286.0" style="-fx-background-color: #3f2863;">
+         <children>
+            <ImageView fitHeight="26.0" fitWidth="39.0" layoutX="1259.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imagens/exit.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
