--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visao.ControlePrincipal">
+<AnchorPane fx:id="AnchorPai" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visao.ControlePrincipal">
    <children>
       <VBox prefHeight="720.0" prefWidth="254.0" style="-fx-background-color: #3f2863;">
          <children>
@@ -21,7 +21,6 @@
                         <Image url="@imagens/porco.png" />
                      </image>
                   </ImageView>
-                  <Label layoutX="64.0" layoutY="18.0" text="Label" />
                   <Label layoutX="70.0" layoutY="27.0" prefHeight="59.0" prefWidth="147.0" text="Vacinação Digital" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="17.0" />
@@ -131,7 +130,7 @@
       </AnchorPane>
       <AnchorPane layoutX="-5.0" layoutY="-2.0" prefHeight="29.0" prefWidth="1286.0" style="-fx-background-color: #3f2863;">
          <children>
-            <ImageView fitHeight="26.0" fitWidth="39.0" layoutX="1259.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="exitButton" fitHeight="26.0" fitWidth="39.0" layoutX="1259.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@imagens/exit.png" />
                </image>
