--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -82,7 +82,7 @@
          <children>
             <AnchorPane layoutX="-6.0" prefHeight="693.0" prefWidth="1034.0">
                <children>
-                  <AnchorPane layoutX="6.0" prefHeight="73.0" prefWidth="1034.0" style="-fx-background-color: #361D7D;" AnchorPane.bottomAnchor="620.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-21.0" AnchorPane.topAnchor="0.0">
+                  <AnchorPane layoutX="6.0" prefHeight="73.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;" AnchorPane.bottomAnchor="620.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label layoutX="25.0" layoutY="18.0" prefHeight="51.0" prefWidth="173.0" text="Pesquisar" textFill="WHITE">
                            <font>
@@ -101,12 +101,17 @@
                       <RowConstraints maxHeight="523.0" minHeight="0.0" prefHeight="523.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <HBox prefHeight="79.0" prefWidth="393.0">
+                        <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <TextField alignment="CENTER" maxWidth="482.0" prefHeight="27.0" prefWidth="357.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
-                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" text="Pesquisar" />
+                              <Label prefHeight="29.0" prefWidth="345.0" text="Digite o CPF" />
+                              <HBox prefHeight="79.0" prefWidth="393.0">
+                                 <children>
+                                    <TextField alignment="CENTER" maxWidth="482.0" prefHeight="27.0" prefWidth="357.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
+                                    <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
+                        </VBox>
                      </children>
                   </GridPane>
                </children>
