--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -82,7 +81,7 @@
          <children>
             <AnchorPane layoutX="-6.0" prefHeight="693.0" prefWidth="1034.0">
                <children>
-                  <AnchorPane layoutX="6.0" prefHeight="73.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;" AnchorPane.bottomAnchor="620.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
+                  <AnchorPane layoutX="6.0" prefHeight="78.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;" AnchorPane.bottomAnchor="622.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label layoutX="25.0" layoutY="18.0" prefHeight="51.0" prefWidth="173.0" text="Pesquisar" textFill="WHITE">
                            <font>
@@ -91,29 +90,69 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <GridPane layoutX="14.0" layoutY="114.0" prefHeight="573.0" prefWidth="999.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints maxHeight="298.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="523.0" minHeight="0.0" prefHeight="523.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                  <AnchorPane layoutX="6.0" layoutY="71.0" prefHeight="71.0" prefWidth="1026.0">
                      <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Label prefHeight="29.0" prefWidth="345.0" text="Digite o CPF" />
-                              <HBox prefHeight="79.0" prefWidth="393.0">
-                                 <children>
-                                    <TextField alignment="CENTER" maxWidth="482.0" prefHeight="27.0" prefWidth="357.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
-                                    <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="29.0" prefWidth="345.0" text="Digite o CPF">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <TextField alignment="CENTER" layoutX="14.0" layoutY="59.0" maxWidth="866.0" prefHeight="27.0" prefWidth="866.0" style="-fx-border-radius: 20; -fx-background-color: white; -fx-border-color: #2C1764; -fx-background-radius: 20;" />
+                        <Button layoutX="897.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
                      </children>
-                  </GridPane>
+                  </AnchorPane>
+                  <AnchorPane layoutX="6.0" layoutY="157.0" prefHeight="536.0" prefWidth="1026.0" visible="false">
+                     <children>
+                        <Label layoutX="8.0" layoutY="348.0" text="CPF" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="384.0" text="RG" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="417.0" text="Sexo" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="454.0" text="Nascimento" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="495.0" text="Comorbidades" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="313.0" text="Nome" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="693.0" prefWidth="1034.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
