--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="AnchorPai" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="visao.ControlePrincipal">
    <children>
       <VBox prefHeight="720.0" prefWidth="254.0" style="-fx-background-color: #2C1764;">
@@ -36,7 +35,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="39.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #2C1764;" text="Pesquisar usuário" textFill="WHITE">
+            <Button fx:id="pesquisarUsuarioButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="39.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="40.0" prefWidth="256.0" style="-fx-background-color: #2C1764;" text="Pesquisar usuário" textFill="WHITE">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -47,14 +46,14 @@
                      </image>
                   </ImageView>
                </graphic>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
                <VBox.margin>
-                  <Insets bottom="10.0" left="5.0" top="10.0" />
+                  <Insets bottom="10.0" right="10.0" top="20.0" />
                </VBox.margin>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #2C1764;" text="Cadastrar usuário" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button fx:id="cadastrarUsuarioButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #2C1764;" text="Cadastrar usuário" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Microsoft JhengHei" size="14.0" />
                </font>
@@ -65,21 +64,51 @@
                      </image>
                   </ImageView>
                </graphic>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
                <VBox.margin>
-                  <Insets bottom="10.0" left="5.0" top="10.0" />
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="cadastrarProfissionalButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #2C1764;" text="Cadastrar profissional" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Microsoft JhengHei" size="14.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@imagens/cadastrarAdm.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <VBox.margin>
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="cadastrarVacinaButton" alignment="BASELINE_LEFT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #2C1764;" text="Cadastrar vacina" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+               <font>
+                  <Font name="Microsoft JhengHei" size="14.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@imagens/vacina.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <VBox.margin>
+                  <Insets bottom="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
          </children>
          <padding>
             <Insets left="10.0" top="20.0" />
          </padding>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </VBox>
-      <AnchorPane layoutX="254.0" layoutY="27.0" prefHeight="693.0" prefWidth="1034.0">
+      <AnchorPane fx:id="anchorGerador" layoutX="254.0" layoutY="27.0" prefHeight="693.0" prefWidth="1034.0">
          <children>
-            <AnchorPane layoutX="-6.0" prefHeight="693.0" prefWidth="1034.0">
+            <AnchorPane fx:id="pesquisarAnchorPane" layoutX="-6.0" prefHeight="693.0" prefWidth="1034.0" visible="false">
                <children>
                   <AnchorPane layoutX="6.0" prefHeight="78.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;" AnchorPane.bottomAnchor="622.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
                      <children>
@@ -101,7 +130,7 @@
                         <Button layoutX="897.0" layoutY="60.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="6.0" layoutY="157.0" prefHeight="536.0" prefWidth="1026.0" visible="false">
+                  <AnchorPane fx:id="usuarioPesquisadoAnchorPane" layoutX="14.0" layoutY="172.0" prefHeight="482.0" prefWidth="978.0">
                      <children>
                         <Label layoutX="8.0" layoutY="348.0" text="CPF" textFill="#3f2863">
                            <font>
@@ -155,11 +184,11 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="693.0" prefWidth="1034.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane fx:id="cadastrarUsuarioAnchorPane" prefHeight="693.0" prefWidth="1034.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <AnchorPane layoutY="247.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="1034.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="247.0">
                      <children>
-                        <GridPane hgap="30.0" layoutX="10.0" layoutY="-172.0" prefHeight="618.0" prefWidth="1017.0" style="-fx-background-color: white;" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="17.0" AnchorPane.topAnchor="-172.0">
+                        <GridPane hgap="30.0" layoutX="4.0" layoutY="-174.0" prefHeight="611.0" prefWidth="1009.0" style="-fx-background-color: white;" vgap="10.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="-174.0">
                            <children>
                               <TextField maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
                                  <GridPane.margin>
@@ -271,6 +300,173 @@
                         </Label>
                      </children>
                   </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="cadastrarProfissionalAnchorPane" prefHeight="693.0" prefWidth="1034.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <AnchorPane prefHeight="73.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;">
+                     <children>
+                        <Label layoutX="25.0" layoutY="18.0" prefHeight="51.0" prefWidth="352.0" text="Cadastrar profissional" textFill="WHITE">
+                           <font>
+                              <Font size="35.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="14.0" layoutY="292.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="1034.0" />
+                  <GridPane hgap="30.0" layoutX="9.0" layoutY="79.0" prefHeight="587.0" prefWidth="1002.0" style="-fx-background-color: white;" vgap="10.0" AnchorPane.bottomAnchor="72.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="79.0">
+                     <children>
+                        <TextField maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </TextField>
+                        <Label layoutX="20.0" layoutY="73.0" text="Nome" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="73.0" text="Endereço" textFill="#3f2863" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" right="60.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="73.0" text="Num.id" textFill="#3f2863" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefWidth="300.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="Arial Bold" size="18.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="-Infinity" prefWidth="400.0" />
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="cadastrarVacinaAnchorPane" prefHeight="693.0" prefWidth="1034.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <AnchorPane prefHeight="73.0" prefWidth="1026.0" style="-fx-background-color: #361D7D;">
+                     <children>
+                        <Label layoutX="25.0" layoutY="18.0" prefHeight="51.0" prefWidth="277.0" text="Cadastrar vacina" textFill="WHITE">
+                           <font>
+                              <Font size="35.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+                  <GridPane hgap="30.0" layoutY="76.0" prefHeight="587.0" prefWidth="1002.0" style="-fx-background-color: white;" vgap="10.0">
+                     <children>
+                        <TextField fx:id="CadastrarVacinaTipoTextField" maxWidth="-Infinity" prefWidth="500.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </TextField>
+                        <Label layoutX="20.0" layoutY="73.0" text="Tipo" textFill="#3f2863">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="73.0" text="Lote" textFill="#3f2863" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" right="60.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="73.0" text="Marca" textFill="#3f2863" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" />
+                           </padding>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Label>
+                        <TextField fx:id="CadastrarVacinaLoteTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="509.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="CadastrarVacinaMarcaTextField" layoutX="181.0" layoutY="70.0" maxWidth="-Infinity" prefHeight="27.0" prefWidth="501.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Button mnemonicParsing="false" style="-fx-background-color: #2C1764; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-color: #2C1764;" text="Cadastrar" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Arial Bold" size="18.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Label text="Dose" textFill="#3f2863" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="Arial Bold" size="24.0" />
+                           </font>
+                           <padding>
+                              <Insets left="200.0" right="60.0" />
+                           </padding>
+                        </Label>
+                        <TextField fx:id="CadastrarVacinaDoseTextField" maxWidth="-Infinity" prefHeight="27.0" prefWidth="514.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-color: #3f2863; -fx-border-radius: 20;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="-Infinity" prefWidth="400.0" />
+                        <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                  </GridPane>
                </children>
             </AnchorPane>
          </children>
