--- a/visao/FXMLMain.fxml
+++ b/visao/FXMLMain.fxml
@@ -210,7 +210,7 @@
                               <Font name="Arial Bold" size="24.0" />
                            </font>
                         </Label>
-                        <Label layoutX="37.0" layoutY="319.0" text="Vacinas" textFill="#3f2863">
+                        <Label layoutX="15.0" layoutY="319.0" text="Vacinas" textFill="#3f2863">
                            <font>
                               <Font name="Arial Bold" size="24.0" />
                            </font>
@@ -232,7 +232,7 @@
                            </padding>
                         </Label>
                         <ComboBox fx:id="adicionarVacinaPesquisarComboBox" layoutX="420.0" layoutY="435.0" prefHeight="25.0" prefWidth="363.0" />
-                        <Button fx:id="pesquisarVacinaAdicionarVacinaButton" layoutX="804.0" layoutY="435.0" mnemonicParsing="false" onAction="#pesquisarUsuario" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Iniciar busca" textFill="WHITE" />
+                        <Button fx:id="pesquisarVacinaAdicionarVacinaButton" layoutX="804.0" layoutY="435.0" mnemonicParsing="false" onAction="#pesquisarUsuario" prefHeight="25.0" prefWidth="122.0" style="-fx-background-color: #2C1764;" text="Adicionar vacina" textFill="WHITE" />
                      </children>
                   </AnchorPane>
                </children>
